Adding only necessary data

--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,12 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+
+/data/Untitled.ipynb
+/data/Zomatodataset.zip
+/data/file1.json
+/data/file2.json
+/data/file3.json
+/data/file4.json
+/data/file5.json
